fix page height overflowed issue by changing terminal height logic

--- a/src/styles.css
+++ b/src/styles.css
@@ -121,7 +121,6 @@
 
 .rmt_page {
     /*margin-top: 64px !important;*/
-    height: 100%;
 }
 
 .rmt_session_name_input {
@@ -130,16 +129,12 @@
 
 html, body {
     margin: 0;
-    height: 100%;
-    width: 100%;
 }
 
 #pages_container {
     margin-left: 88px;
-    height: 100%;
 }
 
 .rmt_terminal {
-    height: 100%;
 }
 
